--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 
 	<distributionManagement>
 	    <repository>
-	      <id>nexus</id>
+	      <id>Nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
 	      <url>http://localhost:8081/repository/MoithRepo/</url>
 	    </repository>
