--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 	      <url>http://localhost:8081/repository/MoithRepo/</url>
 	    </repository>
 	    <snapshotRepository>
-	      <id>nexus</id>
+	      <id>Nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
 	      <url>http://localhost:8081/repository/MoithRepo_snapshort/</url>
 	    </snapshotRepository>
